progressif/main/default/objects/Offer__c/Offer__c.object-meta.xml
<CustomObject>
    <label>Offre</label>
    <nameField>
        <label>Nom de Offre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offres</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>