progressif/main/default/objects/Offer__c/fields/ActivityAreas__c.field-meta.xml
<CustomField>
    <fullName>ActivityAreas__c</fullName>
    <description>Permet de définir les secteurs d&#39;activités concernées par l&#39;offre. Une offre peut concernée plusieurs secteurs d&#39;activités</description>
    <inlineHelpText>Permet de définir les secteurs d&#39;activités concernées par l&#39;offre. Une offre peut concernée plusieurs secteurs d&#39;activités</inlineHelpText>
    <label>Secteur d&#39;activités</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Secteurs_d_activites</valueSetName>
    </valueSet>
</CustomField>