progressif/main/default/objects/Offer__c/fields/AuthorizationDocument__c.field-meta.xml
<CustomField>
    <fullName>AuthorizationDocument__c</fullName>
    <description>Nom du template du document d&#39;autorisation</description>
    <inlineHelpText>Nom du template du document d&#39;autorisation</inlineHelpText>
    <label>Document autorisation</label>
    <length>150</length>
    <type>Text</type>
</CustomField>