progressif/main/default/objects/Offer__c/fields/BillingTerms__c.field-meta.xml
<CustomField>
    <fullName>BillingTerms__c</fullName>
    <description>Permet de définir les modalités de facturation de l&#39;offre: avec facturation d&#39;a-valoirs par anticipation sur la base d&#39;une hypothèse puis d&#39;un solde ou sur la base d&#39;une redevance unique quand tous les éléments sont connus. Ce paramètre aura un impact sur les actions possibles pour le déclenchement de la tarification.</description>
    <inlineHelpText>Permet de définir les modalités de facturation de l&#39;offre: avec facturation d&#39;a-valoirs par anticipation sur la base d&#39;une hypothèse puis d&#39;un solde ou sur la base d&#39;une redevance unique quand tous les éléments sont connus.</inlineHelpText>
    <label>Modalités de facturation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A-valoirs &amp; Solde</fullName>
                <label>1</label>
            </value>
            <value>
                <fullName>Redevance</fullName>
                <label>2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>