progressif/main/default/objects/Offer__c/fields/CdCOnlineProfiles__c.field-meta.xml
<CustomField>
    <fullName>CdCOnlineProfiles__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible CdC Online et Réseau</label>
    <type>Checkbox</type>
</CustomField>