progressif/main/default/objects/Offer__c/fields/CollectionFamily__c.field-meta.xml
<CustomField>
    <fullName>CollectionFamily__c</fullName>
    <description>Famille qui peut vendre l&#39;offre</description>
    <label>Famille de collecte</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Droits Généraux</fullName>
                <label>1</label>
            </value>
            <value>
                <fullName>Grands comptes - Nationaux</fullName>
                <label>2</label>
            </value>
            <value>
                <fullName>Grands comptes - Cinéma</fullName>
                <label>3</label>
            </value>
            <value>
                <fullName>Grands comptes - Spectacles</fullName>
                <label>4</label>
            </value>
            <value>
                <fullName>Licences Online</fullName>
                <label>5</label>
            </value>
            <value>
                <fullName>Licences Phono</fullName>
                <label>6</label>
            </value>
            <value>
                <fullName>Licences Média audiovisuels</fullName>
                <label>7</label>
            </value>
            <value>
                <fullName>Tous</fullName>
                <label>8</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>