progressif/main/default/objects/Offer__c/fields/ContractDocument__c.field-meta.xml
<CustomField>
    <fullName>ContractDocument__c</fullName>
    <description>Nom du template du document contractuel</description>
    <inlineHelpText>Nom du template du document contractuel</inlineHelpText>
    <label>Document contractuel</label>
    <length>150</length>
    <type>Text</type>
</CustomField>