progressif/main/default/objects/Offer__c/fields/CurrentOffer__c.field-meta.xml
<CustomField>
    <fullName>CurrentOffer__c</fullName>
    <formula>IF(ISBLANK( EndingDateValidity__c ),
IF(TODAY() &gt;=  StartingDateValidity__c &amp;&amp;  TECH_NumberOfVenueCriterions__c &gt; 0, true, false ),
IF(TODAY() &gt;=  StartingDateValidity__c &amp;&amp; TODAY() &lt;= EndingDateValidity__c &amp;&amp;  TECH_NumberOfVenueCriterions__c &gt; 0, true, false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Offre en vigueur si date du jour comprise dans les dates de validité de l&#39;offre et s&#39;il existe au moins un critère qui a pour cible Point de diffusion</inlineHelpText>
    <label>Offre en vigueur</label>
    <type>Checkbox</type>
</CustomField>