progressif/main/default/objects/Offer__c/fields/CustomerProfiles__c.field-meta.xml
<CustomField>
    <fullName>CustomerProfiles__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible Clients</label>
    <type>Checkbox</type>
</CustomField>