progressif/main/default/objects/Offer__c/fields/DistributionMethods__c.field-meta.xml
<CustomField>
    <fullName>DistributionMethods__c</fullName>
    <label>Modalités de répartition</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Par analogie</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>Par déclaration</fullName>
                <label>2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>