progressif/main/default/objects/Offer__c/fields/EndingDateValidity__c.field-meta.xml
<CustomField>
    <fullName>EndingDateValidity__c</fullName>
    <description>Date de fin de validité de l&#39;offre</description>
    <label>Date de fin de validité</label>
    <type>Date</type>
</CustomField>