progressif/main/default/objects/Offer__c/fields/LegalForm__c.field-meta.xml
<CustomField>
    <fullName>LegalForm__c</fullName>
    <description>Permet de définir à quel type d&#39;établissement l&#39;offre peut-elle être vendue</description>
    <inlineHelpText>Permet de définir à quel type d&#39;établissement l&#39;offre peut-elle être vendue</inlineHelpText>
    <label>Forme juridique</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entreprise</fullName>
                <label>1</label>
            </value>
            <value>
                <fullName>Association</fullName>
                <label>2</label>
            </value>
            <value>
                <fullName>Etablissement public</fullName>
                <label>3</label>
            </value>
            <value>
                <fullName>Particulier</fullName>
                <label>4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>