progressif/main/default/objects/Offer__c/fields/MainThumbnail__c.field-meta.xml
<CustomField>
    <fullName>MainThumbnail__c</fullName>
    <formula>if(ISBLANK( Thumbnail__c ), &quot;&quot;, IMAGE(Thumbnail__c, &quot;Picture&quot;, 200, 200))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vignette principale</label>
    <type>Text</type>
</CustomField>