progressif/main/default/objects/Offer__c/fields/OfferNumber__c.field-meta.xml
<CustomField>
    <fullName>OfferNumber__c</fullName>
    <description>Identifiant de l&#39;offre</description>
    <displayFormat>OFR-{0000}</displayFormat>
    <label>Numéro de l&#39;Offre</label>
    <type>AutoNumber</type>
</CustomField>