progressif/main/default/objects/Offer__c/fields/OpportunityProcess__c.field-meta.xml
<CustomField>
    <fullName>OpportunityProcess__c</fullName>
    <description>Permet de définir le type d&#39;enregistrement d&#39;opportunités à utiliser</description>
    <inlineHelpText>Permet de définir le type d&#39;enregistrement d&#39;opportunités à utiliser</inlineHelpText>
    <label>Processus d&#39;opportunité</label>
    <length>150</length>
    <type>Text</type>
</CustomField>