progressif/main/default/objects/Offer__c/fields/PeriodicityOffer__c.field-meta.xml
<CustomField>
    <fullName>PeriodicityOffer__c</fullName>
    <description>Permet de définir la périodicité de l&#39;offre</description>
    <inlineHelpText>Permet de définir la périodicité de l&#39;offre</inlineHelpText>
    <label>Périodicité de l&#39;offre</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abonnement d&#39;un an renouvelable</fullName>
                <label>1</label>
            </value>
            <value>
                <fullName>Abonnement non renouvelable</fullName>
                <label>2</label>
            </value>
            <value>
                <fullName>Evénement occasionnel</fullName>
                <label>3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>