progressif/main/default/objects/Offer__c/fields/Picture__c.field-meta.xml
<CustomField>
    <fullName>Picture__c</fullName>
    <label>Vignette</label>
    <length>50</length>
    <type>Text</type>
</CustomField>