progressif/main/default/objects/Offer__c/fields/PreviousOffer__c.field-meta.xml
<CustomField>
    <fullName>PreviousOffer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offre précédente</label>
    <referenceTo>Offer__c</referenceTo>
    <relationshipLabel>Offres suivantes</relationshipLabel>
    <relationshipName>Next_offers</relationshipName>
    <type>Lookup</type>
</CustomField>