progressif/main/default/objects/Offer__c/fields/PreviousOfferExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>PreviousOfferExpirationDate__c</fullName>
    <formula>PreviousOffer__r.EndingDateValidity__c</formula>
    <label>Date de fin de l&#39;offre précédente</label>
    <type>Date</type>
</CustomField>