progressif/main/default/objects/Offer__c/fields/PreviousOfferStartingDate__c.field-meta.xml
<CustomField>
    <fullName>PreviousOfferStartingDate__c</fullName>
    <formula>PreviousOffer__r.StartingDateValidity__c</formula>
    <label>Date de début de l&#39;offre précédente</label>
    <type>Date</type>
</CustomField>