progressif/main/default/objects/Offer__c/fields/Scale__c.field-meta.xml
<CustomField>
    <fullName>Scale__c</fullName>
    <description>Code du Barème à utiliser pour calculer le montant de tarification</description>
    <inlineHelpText>Code du Barème à utiliser pour calculer le montant de tarification</inlineHelpText>
    <label>Barème</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WEB_RADIO_GEN_A</fullName>
                <label>1</label>
            </value>
            <value>
                <fullName>MAD_STR_GEN_A</fullName>
                <label>2</label>
            </value>
            <value>
                <fullName>SELDR_ABO_CAF_REST_PARISN_TG</fullName>
                <label>3</label>
            </value>
            <value>
                <fullName>SELDR_ABO_HOTEL_PART_COM_TG</fullName>
                <label>4</label>
            </value>
            <value>
                <fullName>SELOL_PORTAIL_CHEBS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>