progressif/main/default/objects/Offer__c/fields/StartingDateValidity__c.field-meta.xml
<CustomField>
    <fullName>StartingDateValidity__c</fullName>
    <description>Date de début de validité de l&#39;offre</description>
    <label>Date de début de validité</label>
    <required>true</required>
    <type>Date</type>
</CustomField>