progressif/main/default/objects/Offer__c/fields/TECH_id_webmo__c.field-meta.xml
<CustomField>
    <fullName>TECH_id_webmo__c</fullName>
    <label>TECH ID WEBMO</label>
    <length>18</length>
    <type>Text</type>
</CustomField>