progressif/main/default/objects/Offer__c/fields/TECH_NumberOfVenueCriterions__c.field-meta.xml
<CustomField>
    <fullName>TECH_NumberOfVenueCriterions__c</fullName>
    <label>TECH_nbre de critères point de diffusion</label>
    <summaryFilterItems>
        <field>OfferCriterion__c.TargetCriterion__c</field>
        <operation>equals</operation>
        <value>Point de diffusion</value>
    </summaryFilterItems>
    <summaryForeignKey>OfferCriterion__c.Offer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>