progressif/main/default/objects/Offer__c/fields/TECH_QueryVisible__c.field-meta.xml
<CustomField>
    <fullName>TECH_QueryVisible__c</fullName>
    <description>Offres visibles uniquement pour le profil System Admin 

Ou Profil Client si l&#39;offre est coché Visible client

Ou profil chargé clientèle si l&#39;offre est coché visible Cdc</description>
    <formula>IF(       $Profile.Name=&#39;System Administrator&#39; 
					||   $Profile.Name=&#39;Administrateur système&#39;
					
					|| (CustomerProfiles__c &amp;&amp; ($Profile.Name=&#39;Customer Community Plus Login User&#39;|| $Profile.Name== &#39;Customer Community Plus Login User SACEM&#39;))
					|| (CdCOnlineProfiles__c &amp;&amp; ($Profile.Name=&#39;Chargé de clientèle réseau&#39;|| $Profile.Name== &#39;Chargé de clientèle online&#39;))
					
					, true, false
				
				
				
				
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visible requête</label>
    <type>Checkbox</type>
</CustomField>