progressif/main/default/objects/Offer__c/fields/TypeProcess__c.field-meta.xml
<CustomField>
    <fullName>TypeProcess__c</fullName>
    <label>Type de parcours</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parcours complet</fullName>
                <label>1</label>
            </value>
            <value>
                <fullName>Prospection</fullName>
                <label>2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>