progressif/main/default/objects/Offer__c/fields/ValueOfferFamily__c.field-meta.xml
<CustomField>
    <fullName>ValueOfferFamily__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Famille d&#39;offre</label>
    <referenceTo>OfferFamily__c</referenceTo>
    <relationshipLabel>Offres</relationshipLabel>
    <relationshipName>ChildOffer</relationshipName>
    <type>Lookup</type>
</CustomField>