progressif/main/default/objects/Offer__c/validationRules/OFF01_EndingDateValidity.validationRule-meta.xml
<ValidationRule>
    <fullName>OFF01_EndingDateValidity</fullName>
    <active>true</active>
    <description>Date de fin de validité ne peut être inférieure à la Date de début de validité</description>
    <errorConditionFormula>NOT(ISNULL( EndingDateValidity__c )) &amp;&amp; EndingDateValidity__c  &lt;  StartingDateValidity__c</errorConditionFormula>
    <errorMessage>Date de fin de validité ne peut être inférieure à la Date de début de validité</errorMessage>
</ValidationRule>