progressif/main/default/objects/Offer__c/validationRules/OFF02_StartingDateValidity.validationRule-meta.xml
<ValidationRule>
    <fullName>OFF02_StartingDateValidity</fullName>
    <active>true</active>
    <description>Date de début de validité ne peut pas être inférieure à la date de début de validité de l&#39;offre précédente</description>
    <errorConditionFormula>StartingDateValidity__c  &lt;  PreviousOffer__r.StartingDateValidity__c</errorConditionFormula>
    <errorDisplayField>StartingDateValidity__c</errorDisplayField>
    <errorMessage>Date de début de validité ne peut pas être inférieure à la date de début de validité de l&#39;offre précédente</errorMessage>
</ValidationRule>