progressif/main/default/objects/Offer__c/validationRules/OFF03_PreviousOffer.validationRule-meta.xml
<ValidationRule>
    <fullName>OFF03_PreviousOffer</fullName>
    <active>true</active>
    <description>L&#39;offre actuelle ne peut pas être sa propre offre précédente</description>
    <errorConditionFormula>PreviousOffer__c =  Id &amp;&amp;  $User.BypassVR__c = false &amp;&amp; NOT(ISBLANK(PreviousOffer__c))</errorConditionFormula>
    <errorDisplayField>PreviousOffer__c</errorDisplayField>
    <errorMessage>Merci de ne pas renseigne une offre comme sa propre offre précédente.</errorMessage>
</ValidationRule>