progressif/main/default/objects/Offer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>StartingDateValidity__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>